# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  pyproject.toml
task_manager/: settings.py  views.py  wsgi.py
