[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = [
    {name = "Marina Charaeva", email = "marina_charaeva@yahoo.com"},
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-environ>=0.14.0",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
]
